Fixed scroll on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -511,6 +511,8 @@ th {
 
 .sticky {position:sticky;}
 
+.inset-x-0 {left:0px;right:0px;}
+
 .bottom-0 {bottom:0px;}
 
 .bottom-3 {bottom:0.75rem;}
@@ -558,8 +560,6 @@ th {
 .z-50 {z-index:50;}
 
 .z-\[-10\] {z-index:-10;}
-
-.z-auto {z-index:auto;}
 
 .m-0 {margin:0px;}
 
@@ -633,11 +633,11 @@ th {
 
 .aspect-auto {aspect-ratio:auto;}
 
+.h-10 {height:2.5rem;}
+
 .h-4 {height:1rem;}
 
 .h-52 {height:13rem;}
-
-.h-6 {height:1.5rem;}
 
 .h-64 {height:16rem;}
 
@@ -647,15 +647,17 @@ th {
 
 .h-80 {height:20rem;}
 
+.h-\[100svh\] {height:100svh;}
+
 .h-auto {height:auto;}
 
 .h-fit {height:-moz-fit-content;height:fit-content;}
 
-.h-screen {height:100vh;}
-
 .max-h-screen {max-height:100vh;}
 
 .min-h-96 {min-height:24rem;}
+
+.w-10 {width:2.5rem;}
 
 .w-3\/4 {width:75%;}
 
@@ -664,8 +666,6 @@ th {
 .w-4 {width:1rem;}
 
 .w-52 {width:13rem;}
-
-.w-6 {width:1.5rem;}
 
 .w-72 {width:18rem;}
 
@@ -933,6 +933,8 @@ th {
 
 .scrollbar-hide::-webkit-scrollbar {display:none;}
 
+.hover\:scale-110:hover {--tw-scale-x:1.1;--tw-scale-y:1.1;transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));}
+
 .hover\:scale-125:hover {--tw-scale-x:1.25;--tw-scale-y:1.25;transform:translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));}
 
 .hover\:bg-gray-600:hover {--tw-bg-opacity:1;background-color:rgb(75 85 99 / var(--tw-bg-opacity));}
@@ -999,6 +1001,8 @@ th {
 
 .md\:mt-0 {margin-top:0px;}
 
+.md\:flex {display:flex;}
+
 .md\:h-32 {height:8rem;}
 
 .md\:h-64 {height:16rem;}
@@ -1014,6 +1018,10 @@ th {
 .md\:w-auto {width:auto;}
 
 .md\:flex-row {flex-direction:row;}
+
+.md\:items-center {align-items:center;}
+
+.md\:justify-center {justify-content:center;}
 
 .md\:px-10 {padding-left:2.5rem;padding-right:2.5rem;}
 
